--- a/public/main.css
+++ b/public/main.css
@@ -70,6 +70,9 @@ p {
 
 
 /*Custom*/
+.logo {
+    width: 6vw;
+}
 h1.header-title{
 
 }
@@ -116,13 +119,28 @@ h3.recipe-title {
     /*max-width: 100%;*/
     max-height: 100%;
     height: 10vw;
+    /*margin: auto;*/
+    display: block;
     /*height: 200px;*/
     /*object-position: 50% 50%;*/
     object-fit: cover;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
-#footer {
+.callout {
+    padding: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    border: 1px solid #e9ecef;
+    border-left-width: .25rem;
+    border-radius: .25rem;
+}
+
+.callout-info{
+    border-left-color:#5bc0de;
+}
+
+/*#footer {
     background-color: black;
     color: white;
     position: fixed;
@@ -145,4 +163,4 @@ h3.recipe-title {
   
   #footer a:hover {
     opacity: 0.8;
-  }
+  }*/
